Update on the roster app
